--- a/index.html
+++ b/index.html
@@ -7,22 +7,43 @@
 		<link rel="stylesheet" href="css/reset.css"/>
 		<link rel="stylesheet" href="css/global.css"/>
 		<link rel="stylesheet" href="css/mediaQueries.css"/>
+		<link rel="stylesheet" href="css/bootstrap.min.css"/>
 
 	</head>
 	<body>
+		<div class="container">
 		<header>
 			<div class="wrapper">
+			<div class="row">
+
+			<div class="col-md-2">
 				<div class="logo-search">
 					<img class="pull-left" src="img/logo.png" />
 				</div>
+			</div>
 
+			<div class="col-md-3 hidden-xs">
 				<form method="POST" action="index.html">
 					<input type="search" required class="search">
 					<input type="submit" name="submit" value="Rechercher" class="submit">
 				</form>
+			<div class="col-md-3 offset-md-2"></div></div>
+			
+
+			<div class="col-md-2"></div>
+			<div class="pull-xs-right">
 				<div class="user">
-				    <a href="#">Luke Chesser</a>
-				</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <ul class="nav navbar-nav">
+			        <li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Luke Chesser<span class="caret"></span></a>
+			          <ul class="dropdown-menu">
+			            <li><a href="#">Edit my profile</a></li>
+			            <li><a href="#">Logout</a></li>
+			            </ul></li></ul></div>
+					<div class="col-md-2 offset-md-2"></div>
+
+			</div>
 			</div>
 		</header>
 		<aside>
